# ray_tracing_in_one_weekend

./: .gitattributes  CMakeLists.txt  README.md  config.h  main.c  random.hlsl  shader.c  shader.comp  shader.h
.github/workflows/: build.yml
shaders/: random.glsl  ray.comp  shader.comp
src/: config.h  helpers.c  helpers.h  main.c
